--- a/adds/selector.html
+++ b/adds/selector.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!--Plugin CSS file with desired skin-->
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
 
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -105,7 +104,20 @@
             }
 
             function cadena() {
-                console.log(cadena_final);
+                vw_servicio_publico_perfilado.remove();
+
+                vw_servicio_publico_perfilado = new wms_GIS("http://192.168.10.51:8282/geoserver/wms?", {
+                    format: 'image/png',
+                    uppercase: true,
+                    transparent: true,
+                    version: '1.3.0',
+                    continuousWorld : true,
+                    tiled: true,
+                    attribution: "Direccion Gral de GIS",
+                    info_format: 'application/json',
+                    opacity: 1,
+                    cql_filter: cadena_final
+                }).getLayer("infraestructura:vw_visor_alumbrado_publico").addTo(map);
             }
 
             function calcularMes(m) {
@@ -153,7 +165,7 @@
 
                 return mes;
             }
-        })
+        });
     </script>
 </body>
 
